package name changed to faim

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = continuous_kleinberg
-version = attr: continuous_kleinberg.__version__
+name = faim
+version = attr: faim.__version__
 author = Meike Zehlike, Alex Loosley
 author_email = meike.zehlike@zalando.de, alex.loosley@zalando.de
 description = "Source code for doing fair score remapping using optimal transport to achieve a desired combination of false positive parity, false negative parity, or calibration."
@@ -19,14 +19,14 @@ install_requires =
     pandas >= 1.0.0
 
 [options.packages.find]
-include=continuous_kleinberg*
+include=faim*
 exclude=
     test
     *.egg-info
 
 [options.entry_points]
 console_scripts =
-    continuous-kleinberg = continuous_kleinberg.main:main
+    faim-experiment = faim.main:main
 
 [options.extras_require]
 experiment =
