--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifiers =
 packages = find:
 zip_safe = True
 include_package_data = True
+python_requires = >=3.7
 install_requires =
     pot >= 0.8.0
     pandas >= 1.0.0
@@ -32,6 +33,9 @@ console_scripts =
 experiment =
     jupyter>=1.0.0
     matplotlib>=3.5.0
+    scikit-learn>=1.1.0
+    statsmodels>=0.13.5
+    plotly>=5.11.0
 dev =
     pre-commit>=2.20.0
     pytest>=7.0.0
