--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,15 @@
 [metadata]
 name = faim
 version = attr: faim.__version__
+license = Apache License Version 2.0
 author = Meike Zehlike, Alex Loosley
 author_email = meike.zehlike@zalando.de, alex.loosley@zalando.de
 description = "Source code for doing fair score remapping using optimal transport to achieve a desired combination of false positive parity, false negative parity, or calibration."
 long_description = file: README.md
 long_description_content_type = text/markdown
+project_urls =
+    Paper = https://arxiv.org/pdf/2212.00469.pdf
+    Code Repository = https://github.com/MilkaLichtblau/faim
 keywords = fairness, optimal transport
 classifiers =
     Programming Language :: Python :: 3
