haromize package abd readme description

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,11 @@ version = attr: faim.__version__
 license = Apache License Version 2.0
 author = Meike Zehlike, Alex Loosley
 author_email = meike.zehlike@zalando.de, alex.loosley@zalando.de
-description = "Source code for doing fair score remapping using optimal transport to achieve a desired combination of false positive parity, false negative parity, or calibration."
+description =
+    FAIM (FAir Interpolation Method), described in "Beyond Incompatibility: Interpolation between Mutually
+    Exclusive Fairness Criteria in Classification Problems", is a post-processing algorithm for achieving
+    a combination of group-fairness criteria
+    (equalized false postive rates, equalized false negative rates, group calibration).
 long_description = file: README.md
 long_description_content_type = text/markdown
 project_urls =
