--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ experiment =
     scikit-learn>=1.1.0
     statsmodels>=0.13.5
     plotly>=5.11.0
+    pooch>=1.6.0
 dev =
     pre-commit>=2.20.0
     pytest>=7.0.0
