--- a/.github/workflows/python-build-test.yaml
+++ b/.github/workflows/python-build-test.yaml
@@ -43,7 +43,7 @@ jobs:
     - name: Build Package
       run: |
         python -m pip install --upgrade pip
-        pip install ".[dev]"
+        pip install ".[dev,experiment]"
 
     - name: Test Package
       run: pytest
