add latex dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
 [options.extras_require]
 experiment =
     jupyter>=1.0.0
+    latex>=0.7.0
     lxml>=4.9.1
     matplotlib>=3.5.0
     scikit-learn>=1.1.0
