--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,7 @@ include_package_data = True
 python_requires = >=3.7
 install_requires =
     pot >= 0.8.0
-    pandas >= 1.0.0
+    pandas >= 1.0.0, <2.0.0
 
 [options.packages.find]
 include=faim*
