skip optional tests in github actions

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = --strict-markers --cov-report html --cov=faim
 markers =
-    new: test not using unittest (deselect with '-m "not new"')
+    optional: "optional tests that don't need to be run"
