--- a/setup.cfg
+++ b/setup.cfg
@@ -25,8 +25,9 @@ include_package_data = True
 python_requires = >=3.8
 install_requires =
     pot >= 0.8.0
-    pandas >= 1.5.0
+    pandas>=1.5.0
     scikit-learn>=1.0.0
+    seaborn>=0.13.2
 
 [options.packages.find]
 include=faim*
