--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = faim
 version = attr: faim.__version__
 license = Apache License Version 2.0
 author = Meike Zehlike, Alex Loosley
-author_email = meike.zehlike@zalando.de, alex.loosley@zalando.de
+author_email = meike.zehlike@zalando.de, aloosley@alumni.brown.edu
 description =
     FAIM (FAir Interpolation Method), described in "Beyond Incompatibility: Interpolation between Mutually
     Exclusive Fairness Criteria in Classification Problems", is a post-processing algorithm for achieving
@@ -12,7 +12,7 @@ description =
 long_description = file: README.md
 long_description_content_type = text/markdown
 project_urls =
-    Paper = https://arxiv.org/pdf/2212.00469.pdf
+    Paper = https://arxiv.org/pdf/2206.03256
     Code Repository = https://github.com/MilkaLichtblau/faim
 keywords = fairness, optimal transport
 classifiers =
@@ -22,7 +22,7 @@ classifiers =
 packages = find:
 zip_safe = True
 include_package_data = True
-python_requires = >=3.8
+python_requires = >=3.9
 install_requires =
     pot >= 0.8.0
     pandas>=1.5.0
