--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ install_requires =
     pandas>=1.5.0
     scikit-learn>=1.0.0
     seaborn>=0.13.2
+    fairlearn>=0.10.0
 
 [options.packages.find]
 include=faim*
