--- a/.github/workflows/python-build-test.yaml
+++ b/.github/workflows/python-build-test.yaml
@@ -19,8 +19,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows, linux]
-        python: [3.9.19, 3.12.4]
+        os: [windows-latest, ubuntu-latest]
+        python: [3.9, 3.12]
     steps:
     - name: Checkout
       uses: actions/checkout@v3
